# QSBarcode

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: QualitySoftBarcodeConfig.cmake
demo/native-public/: CMakeLists.txt  README.md
demo/native-public/c/: verify.c
demo/native-public/cpp/: verify.cpp
include/qsbarcode/: qsbarcode.hpp  qsbarcode_loader.h
native/: README.md
tests/: header_compile.cpp  smoke.cpp
